Fixed portfolio modal blur background and scrollbar shift

--- a/src/style/components/App.less
+++ b/src/style/components/App.less
@@ -5,6 +5,7 @@ body {
 	color: @black;
 	margin: 0;
 	min-width: 320px;
+	overflow-y: scroll;
 }
 
 h1 {
