--- a/src/style/components/Portfolio.less
+++ b/src/style/components/Portfolio.less
@@ -12,6 +12,7 @@
 
 .portfolio-content {
 	margin-top: -70px;
+	padding-bottom: 30px;
 }
 
 .portfolio-cat-control {
@@ -191,7 +192,7 @@
 
 /* Blur modal background */
 
-body.modal-open #root-view {
+body.modal-open #root {
 	filter: blur(8px);
 	margin: -1px -7px;
 }
